crates/science-lexer/tests/snapshots/snapshots__blank_and_comment_lines_between_blocks.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\\\ndef main():\n    a\n\n            # not an indent\n\n    b\n\")"
---
== source ==
|def main():
|    a
|
|            # not an indent
|
|    b
|

== tokens ==
   0..3     Function
   4..8     Ident("main")
   8..9     LParen
   9..10    RParen
  10..11    Colon
  11..12    Newline
  12..16    Indent
  16..17    Ident("a")
  17..18    Newline
  52..53    Ident("b")
  53..54    Newline
  54..54    Dedent
  54..54    Eof

== diagnostics ==
(none)
