crates/science-lexer/tests/snapshots/snapshots__bracket_continuation_with_misleading_indentation.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\\\ndef main():\n    call(\n            first,\n  second,\n        [1, 2,\n         3],\n    )\n    after\n\")"
---
== source ==
|def main():
|    call(
|            first,
|  second,
|        [1, 2,
|         3],
|    )
|    after
|

== tokens ==
   0..3     Function
   4..8     Ident("main")
   8..9     LParen
   9..10    RParen
  10..11    Colon
  11..12    Newline
  12..16    Indent
  16..20    Ident("call")
  20..21    LParen
  34..39    Ident("first")
  39..40    Comma
  43..49    Ident("second")
  49..50    Comma
  59..60    LBracket
  60..61    Int { value: 1, base: Dec, suffix: None }
  61..62    Comma
  63..64    Int { value: 2, base: Dec, suffix: None }
  64..65    Comma
  75..76    Int { value: 3, base: Dec, suffix: None }
  76..77    RBracket
  77..78    Comma
  83..84    RParen
  84..85    Newline
  89..94    Ident("after")
  94..95    Newline
  95..95    Dedent
  95..95    Eof

== diagnostics ==
(none)
