crates/science-lexer/tests/snapshots/snapshots__empty_file.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\")"
---
== source ==
(empty)

== tokens ==
   0..0     Eof

== diagnostics ==
(none)
