crates/science-lexer/tests/snapshots/snapshots__inconsistent_dedent.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\\\na:\n    b:\n        c\n  d\n\")"
---
== source ==
|a:
|    b:
|        c
|  d
|

== tokens ==
   0..1     Ident("a")
   1..2     Colon
   2..3     Newline
   3..7     Indent
   7..8     Ident("b")
   8..9     Colon
   9..10    Newline
  10..18    Indent
  18..19    Ident("c")
  19..20    Newline
  22..22    Dedent
  22..22    Dedent
  22..22    Indent
  22..23    Ident("d")
  23..24    Newline
  24..24    Dedent
  24..24    Eof

== diagnostics ==
SC0004 error: this indentation matches no open level
    primary   20..22: indented 2 columns
    note: the open levels are 0
