crates/science-lexer/tests/snapshots/snapshots__integer_literals.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"42 1_000_000 0xFF 0xdead_beef 0o777 0b1010 42i32 7u8\\n\")"
---
== source ==
|42 1_000_000 0xFF 0xdead_beef 0o777 0b1010 42i32 7u8
|

== tokens ==
   0..2     Int { value: 42, base: Dec, suffix: None }
   3..12    Int { value: 1000000, base: Dec, suffix: None }
  13..17    Int { value: 255, base: Hex, suffix: None }
  18..29    Int { value: 3735928559, base: Hex, suffix: None }
  30..35    Int { value: 511, base: Oct, suffix: None }
  36..42    Int { value: 10, base: Bin, suffix: None }
  43..48    Int { value: 42, base: Dec, suffix: Some(I32) }
  49..52    Int { value: 7, base: Dec, suffix: Some(U8) }
  52..53    Newline
  53..53    Eof

== diagnostics ==
(none)
