crates/science-lexer/tests/snapshots/snapshots__interface_summarize_program.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\\\ninterface Summarize:\n    def summarize(self) -> String\n\n    def preview(self) -> String:\n        truncate(self.summarize(), 80)\n\nDoc implements Summarize:\n    def summarize(self) -> String:\n        truncate(self.body, 200)\n\")"
---
== source ==
|interface Summarize:
|    def summarize(self) -> String
|
|    def preview(self) -> String:
|        truncate(self.summarize(), 80)
|
|Doc implements Summarize:
|    def summarize(self) -> String:
|        truncate(self.body, 200)
|

== tokens ==
   0..9     Interface
  10..19    Ident("Summarize")
  19..20    Colon
  20..21    Newline
  21..25    Indent
  25..28    Function
  29..38    Ident("summarize")
  38..39    LParen
  39..43    SelfValue
  43..44    RParen
  45..47    Arrow
  48..54    Ident("String")
  54..55    Newline
  60..63    Function
  64..71    Ident("preview")
  71..72    LParen
  72..76    SelfValue
  76..77    RParen
  78..80    Arrow
  81..87    Ident("String")
  87..88    Colon
  88..89    Newline
  89..97    Indent
  97..105   Ident("truncate")
 105..106   LParen
 106..110   SelfValue
 110..111   Dot
 111..120   Ident("summarize")
 120..121   LParen
 121..122   RParen
 122..123   Comma
 124..126   Int { value: 80, base: Dec, suffix: None }
 126..127   RParen
 127..128   Newline
 129..129   Dedent
 129..129   Dedent
 129..132   Ident("Doc")
 133..143   Implements
 144..153   Ident("Summarize")
 153..154   Colon
 154..155   Newline
 155..159   Indent
 159..162   Function
 163..172   Ident("summarize")
 172..173   LParen
 173..177   SelfValue
 177..178   RParen
 179..181   Arrow
 182..188   Ident("String")
 188..189   Colon
 189..190   Newline
 190..198   Indent
 198..206   Ident("truncate")
 206..207   LParen
 207..211   SelfValue
 211..212   Dot
 212..216   Ident("body")
 216..217   Comma
 218..221   Int { value: 200, base: Dec, suffix: None }
 221..222   RParen
 222..223   Newline
 223..223   Dedent
 223..223   Dedent
 223..223   Eof

== diagnostics ==
(none)
