crates/science-lexer/tests/snapshots/snapshots__literal_errors.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"\\\nlet a be \\\"open\nlet b be 'x\nlet c be \\\"bad \\\\q escape\\\"\nlet d be 340282366920938463463374607431768211456\nlet e be 0b1012\n\")"
---
== source ==
|let a be "open
|let b be 'x
|let c be "bad \q escape"
|let d be 340282366920938463463374607431768211456
|let e be 0b1012
|

== tokens ==
   0..3     Let
   4..5     Ident("a")
   6..8     Be
   9..14    Str("open")
  14..15    Newline
  15..18    Let
  19..20    Ident("b")
  21..23    Be
  24..26    Char('x')
  26..27    Newline
  27..30    Let
  31..32    Ident("c")
  33..35    Be
  36..51    Str("bad q escape")
  51..52    Newline
  52..55    Let
  56..57    Ident("d")
  58..60    Be
  61..100   Int { value: 0, base: Dec, suffix: None }
 100..101   Newline
 101..104   Let
 105..106   Ident("e")
 107..109   Be
 110..116   Int { value: 5, base: Bin, suffix: None }
 116..117   Newline
 117..117   Eof

== diagnostics ==
SC0007 error: unterminated string literal
    primary   9..14: this string has no closing `"`
SC0008 error: unterminated character literal
    primary   24..26: this `'` is never closed
SC0006 error: unknown escape sequence `\q`
    primary   41..43: unknown escape
    note: the escapes are `\n`, `\t`, `\r`, `\\`, `\"`, `\'`, `\0` and `\u{...}`
SC0005 error: this integer literal is too large
    primary   61..100: value out of range
    note: the widest integer type is `U64`, whose largest value is 18446744073709551615
SC0010 error: `2` is not a valid digit in a binary literal
    primary   115..116: invalid digit
