crates/science-lexer/tests/snapshots/snapshots__operators_and_punctuation.snap
---
source: crates/science-lexer/tests/snapshots.rs
expression: "dump(\"+ - * / % & | ^ << >> = == != < > <= >= => _ @ . , : ;\\n\")"
---
== source ==
|+ - * / % & | ^ << >> = == != < > <= >= => _ @ . , : ;
|

== tokens ==
   0..1     Plus
   2..3     Minus
   4..5     Star
   6..7     Slash
   8..9     Percent
  10..11    Amp
  12..13    Pipe
  14..15    Caret
  16..18    Shl
  19..21    Shr
  22..23    Eq
  24..26    EqEq
  27..29    NotEq
  30..31    Lt
  32..33    Gt
  34..36    LtEq
  37..39    GtEq
  40..42    FatArrow
  43..44    Underscore
  45..46    AtSign
  47..48    Dot
  49..50    Comma
  51..52    Colon
  53..54    Semi
  54..55    Newline
  55..55    Eof

== diagnostics ==
SC0016 error: equality is written `is`
    primary   24..26: `==` is not an operator in Science
    note: there is one spelling for each comparison: `is` and `is not` for identity, and `>`, `<`, `>=`, `<=` for order
SC0017 error: inequality is written `is not`
    primary   27..29: `!=` is not an operator in Science
    note: there is one spelling for each comparison: `is` and `is not` for identity, and `>`, `<`, `>=`, `<=` for order
